deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: complete-production-e2e-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: complete-production-e2e-app
  template:
    metadata:
      labels:
        app: complete-production-e2e-app
    spec:
      containers:
      - name: complete-production-e2e-app
        image: sudhakar20000/complete-e2e-pipeline:1.0.0-35
        ports:
        - containerPort: 8888
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
