service.yml
apiVersion: v1
kind: Service
metadata:
  name: complete-production-e2e-service
  namespace: end-to-end
spec:
  selector:
    app: complete-production-e2e-app
  ports:
    - port: 80
      targetPort: 8080  
  type: ClusterIP
