app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: complete-production-e2e-ingress
  namespace: end-to-end
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: complete-production-e2e-service
            port:
                    number: 80
